--- a/view/VentaEmpleado.html
+++ b/view/VentaEmpleado.html
@@ -18,39 +18,58 @@
 	<div class="col-sm-14">
        
         <form role="form">
-            <div class="row">
+            <div class="row" style="width:90%; margin:0 auto;">
                 <?php
-                            if ($_SESSION["superadmin"] == "S") {
+                    if ($_SESSION["superadmin"] == "S") {
                         ?>
-                        <div class="col-lg-4 left">
-                            <label for="inputMarca">Sucursal:</label>
-                            <div class="form-group has-success">
-                                
-                                <div class="input-group">
-
-                                    <input id="txtSucursal" type="text" value="<?php echo $_SESSION["sucursal"] ?>" class="form-control" name="txtSucursal" required="" placeholder="Seleccione una Sucursal" autofocus="" disabled/>
-                                    <span class="input-group-btn" >
-                                          <button type="button" class="btn btn-success" id="btnBuscarSucursal" ><i class='fa fa-search'></i>
-                                                        Buscar
-                                          </button>
-                                    </span>
-                                </div>   
-                            </div>
+                        <div class="row" style="padding-left:20px; padding-right:20px;">
+                                <label for="inputMarca">Sucursal:</label>
+                                <div class="form-group has-success">
+                                    
+                                    <div class="input-group">
+    
+                                        <input id="txtSucursal" type="text" value="<?php echo $_SESSION["sucursal"] ?>" class="form-control" name="txtSucursal" required="" placeholder="Seleccione una Sucursal" autofocus="" disabled/>
+                                        <span class="input-group-btn" >
+                                              <button type="button" class="btn btn-success" id="btnBuscarSucursal" ><i class='fa fa-search'></i>
+                                                Buscar
+                                              </button>
+                                        </span>
+                                    </div>   
+                                </div>
                         </div>
                         <?php } ?>
-                <div class="col-lg-4 left">
-                    <div class="form-group has-success">
-                        <label for="inputMarca">Desde :</label>
-                        <input id="txtIdSucursal" type="hidden" value="<?php echo $_SESSION["idsucursal"] ?>" maxlength="50" class="form-control" name="txtIdSucursal" required="" placeholder="" autofocus="" />
-                        <input id="cboFechaDesdeVentEmp" type="date" value="<?php echo date("Y-m-d"); ?>"  maxlength="50" class="form-control" name="cboFechaDesdeVentEmp" required="" />
+                    <div class="row">
+                        <div class="col-lg-4 col-md-6 col-sm-6">
+                            <label for="inputMarca">Empleado:</label>
+                            <div class="form-group has-success">
+  
+                                <div class="input-group">
+                                    <input id="txtEmpleado" type="text" value="<?php echo $_SESSION["sucursal"] ?>" class="form-control" name="txtEmpleado" required="" placeholder="Seleccione un Empleado" autofocus="" disabled/>
+                                    <span class="input-group-btn" >
+                                          <button type="button" class="btn btn-success" id="btnBuscarEmpleado" ><i class='fa fa-search'></i>
+                                                Buscar
+                                          </button>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    
+
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="form-group has-success">
+                            <label for="inputMarca">Desde :</label>
+                            <input id="txtIdSucursal" type="hidden" value="<?php echo $_SESSION["idsucursal"] ?>" maxlength="50" class="form-control" name="txtIdSucursal" required="" placeholder="" autofocus="" />
+                            <input id="cboFechaDesdeVentEmp" type="date" value="<?php echo date("Y-m-d"); ?>"  maxlength="50" class="form-control" name="cboFechaDesdeVentEmp" required="" />
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="form-group has-success">
+                            <label for="inputMarca">Hasta :</label>
+                            <input id="cboFechaHastaVentEmp" type="date" value="<?php echo date("Y-m-d"); ?>"  maxlength="50" class="form-control" name="cboFechaHastaVentEmp" required="" />
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-4 left">
-                    <div class="form-group has-success">
-                        <label for="inputMarca">Hasta :</label>
-                        <input id="cboFechaHastaVentEmp" type="date" value="<?php echo date("Y-m-d"); ?>"  maxlength="50" class="form-control" name="cboFechaHastaVentEmp" required="" />
-                    </div>
-                </div>
+
             </div>
         </form>
         <br>
@@ -147,6 +166,57 @@
     </div>
   </div>
 </div>
+
+<div id="modalListadoEmpleado" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">Listado de Empleados</h4>
+        </div>
+        <div class="modal-body">
+        <div class="table-responsive">
+          <table id="tblEmpleados" class="table table-striped table-bordered table-condensed table-hover" cellpadding="0" cellspacing="0" width="100%">
+                      <thead>
+                          <tr>
+                              <th>Seleccione</th>
+                              <th>#</th>
+                              <th>Foto</th>
+                              <th>Empleado</th>
+                              <th>N° Doc.</th>
+                              <th>Dirección</th>
+                              <th>Teléfono</th>
+                              <th>Email</th>
+                          </tr>
+                      </thead>
+
+                      <tfoot>
+                          <tr>
+                            <th>Seleccione</th>
+                            <th>#</th>
+                            <th>Foto</th>
+                            <th>Empleado</th>
+                            <th>N° Doc.</th>
+                            <th>Dirección</th>
+                            <th>Teléfono</th>
+                            <th>Email</th>
+                          </tr>
+                      </tfoot>
+
+                      <tbody id="Empleados">
+
+                      </tbody>
+                  </table>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-remove"></i> Cerrar</button>
+          <button type="button" id="btnAgregarEmpleado" class="btn btn-primary">
+          <i class="fa fa-plus"></i> Agregar</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 <script type="text/javascript">
     
