--- a/view/VentaEmpleadoDet.html
+++ b/view/VentaEmpleadoDet.html
@@ -20,10 +20,10 @@
         <form role="form">
             <div class="row">
                 <?php
-                            if ($_SESSION["superadmin"] == "S") {
+                        if ($_SESSION["superadmin"] == "S") {
                         ?>
                         <div class="col-lg-4 left">
-                            <label for="inputMarca">Sucursal:</label>
+                            <label for="txtSucursal">Sucursal:</label>
                             <div class="form-group has-success">
 
                                 <div class="input-group">
@@ -55,7 +55,6 @@
         </form>
         <br>
             <div id="VerListado" class="table-responsive">
-
 
                     <table id="tblVentaEmpDet" class="table table-striped table-bordered table-condensed table-hover" cellpadding="0" cellspacing="0" width="100%">
                     <thead>
