--- a/view/VentaEmpleado.html
+++ b/view/VentaEmpleado.html
@@ -40,11 +40,10 @@
                         <?php } ?>
                     <div class="row">
                         <div class="col-lg-4 col-md-6 col-sm-6">
-                            <label for="inputMarca">Empleado:</label>
+                            <label for="txtEmpleado">Empleado:</label>
                             <div class="form-group has-success">
-  
                                 <div class="input-group">
-                                    <input id="txtEmpleado" type="text" value="<?php echo $_SESSION["sucursal"] ?>" class="form-control" name="txtEmpleado" required="" placeholder="Seleccione un Empleado" autofocus="" disabled/>
+                                    <input id="txtEmpleado" type="text" value="" class="form-control" name="txtEmpleado" required="" placeholder="Seleccione un Empleado"/>
                                     <span class="input-group-btn" >
                                           <button type="button" class="btn btn-success" id="btnBuscarEmpleado" ><i class='fa fa-search'></i>
                                                 Buscar
@@ -54,14 +53,15 @@
                             </div>
                         </div>
                     
-
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="form-group has-success">
                             <label for="inputMarca">Desde :</label>
                             <input id="txtIdSucursal" type="hidden" value="<?php echo $_SESSION["idsucursal"] ?>" maxlength="50" class="form-control" name="txtIdSucursal" required="" placeholder="" autofocus="" />
+                            <input id="txtIdEmpleado" type="hidden" value="" maxlength="50" class="form-control" name="txtIdEmpleado"/>
                             <input id="cboFechaDesdeVentEmp" type="date" value="<?php echo date("Y-m-d"); ?>"  maxlength="50" class="form-control" name="cboFechaDesdeVentEmp" required="" />
                         </div>
                     </div>
+
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="form-group has-success">
                             <label for="inputMarca">Hasta :</label>
@@ -74,42 +74,40 @@
         </form>
         <br>
             <div id="VerListado" class="table-responsive">
+                <table id="tblVentaEmp" class="table table-striped table-bordered table-condensed table-hover" cellpadding="0" cellspacing="0" width="100%">
+                  <thead>
+                    <tr>
+                        <th>Fecha</th>
+                        <th>Sucursal</th>
+                        <th>Empleado</th>
+                        <th>Cliente</th>
+                        <th>Comprobante</th>
+                        <th>Número</th>
+                        <th>Tipo de Pago</th>
+                        <th>Impuesto</th>
+                        <th>Sub Total</th>
+                        <th>Total Impuesto</th>
+                        <th>Total</th>
+                    </tr>
+                </thead>
+         
+                <tfoot>
+                    <tr>
+                        <th>Fecha</th>
+                        <th>Sucursal</th>
+                        <th>Empleado</th>
+                        <th>Cliente</th>
+                        <th>Comprobante</th>
+                        <th>Número</th>
+                        <th>Tipo de Pago</th>
+                        <th>Impuesto</th>
+                        <th>Sub Total</th>
+                        <th>Total Impuesto</th>
+                        <th>Total</th>
+                    </tr>
+                </tfoot>
 
-
-                    <table id="tblVentaEmp" class="table table-striped table-bordered table-condensed table-hover" cellpadding="0" cellspacing="0" width="100%">
-                    <thead>
-                        <tr>
-                            <th>Fecha</th>
-                            <th>Farmacia</th>
-                            <th>Empleado</th>
-                            <th>Cliente</th>
-                            <th>Comprobante</th>
-                            <th>Serie</th>
-                            <th>Numero</th>
-                            <th>Impuesto</th>
-                            <th>Sub Total</th>
-                            <th>Total Impuesto</th>
-                            <th>Total</th>
-                        </tr>
-                    </thead>
-             
-                    <tfoot>
-                        <tr>
-                            <th>Fecha</th>
-                            <th>Farmacia</th>
-                            <th>Empleado</th>
-                            <th>Cliente</th>
-                            <th>Comprobante</th>
-                            <th>Serie</th>
-                            <th>Numero</th>
-                            <th>Impuesto</th>
-                            <th>Sub Total</th>
-                            <th>Total Impuesto</th>
-                            <th>Total</th>
-                        </tr>
-                    </tfoot>
-             
-                </table>
+              </table>
             </div>
     </div>
 		                    
