--- a/view/Ventaanterior.html
+++ b/view/Ventaanterior.html
@@ -162,7 +162,7 @@
                     <div class="col-lg-12 left" id="VerRegPedido">
                     <p></p>
                         <button class="btn btn-success" type="button" id="btnGenerarProforma"><i class="fa fa-floppy-o"></i> Registrar Proforma</button>
-                        <button type="button" id="btnGenerarVenta" class="btn btn-warning" ><i class="fa fa-floppy-o"></i> Generar Venta</button>
+                        <button type="button" id="btnGenerarVenta" class="btn btn-warning" ><i class="fa fa-floppy-o"></i> Generar Venta  2</button>
                         <a href="Venta.php" class="btn btn-primary" ><i class="fa fa-remove"></i> Cancelar</a>
                         <hr>
                         <span class="lead text-primary"></span>
