--- a/view/Venta.html
+++ b/view/Venta.html
@@ -880,7 +880,7 @@ border-radius: 10px;}
 
 							<th>Marca</th>
 
-              <th>prosedencia</th>
+              <th>procedencia</th>
 
 							<th>Ubicación</th>
 
@@ -920,7 +920,7 @@ border-radius: 10px;}
 
 							<th>Marca</th>
 
-              <th>prosedencia</th>
+              <th>procedencia</th>
 
 							<th>Ubicación</th>
 
