--- a/view/Ventaanterior.html
+++ b/view/Ventaanterior.html
@@ -439,7 +439,7 @@ border-radius: 10px;}
                             <th>Codigo-Universal</th>
                             <th>Categoría</th>
 							<th>Marca</th>
-              <th>prosedencia</th>
+              <th>procedencia</th>
 							<th>Ubicación</th>
 
 							<th>Unidad</th>
@@ -459,7 +459,7 @@ border-radius: 10px;}
                             <th>Codigo-Universal</th>
                             <th>Categoría</th>
 							<th>Marca</th>
-              <th>prosedencia</th>
+              <th>procedencia</th>
 							<th>Ubicación</th>
 
 						  <th>Unidad</th>
