--- a/view/Pedido.html
+++ b/view/Pedido.html
@@ -790,7 +790,7 @@ border-radius: 10px;}
                             <th>Codigo-Universal</th>
                             <th>Categoría</th>
 							<th>Marca</th>
-              <th>prosedencia</th>
+              <th>procedencia</th>
 							<th>Ubicación</th>
 
 							<th>Unidad</th>
@@ -810,7 +810,7 @@ border-radius: 10px;}
                             <th>Codigo-Universal</th>
                             <th>Categoría</th>
 							<th>Marca</th>
-              <th>prosedencia</th>
+              <th>procedencia</th>
 							<th>Ubicación</th>
 
 						  <th>Unidad</th>
